k8s/quarkus-app-deployment-bundle.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    name:  quarkus-msvcs
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: quarkus-app
    name: quarkus-app
    namespace: quarkus-msvcs
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: quarkus-app
    template:
      metadata:
        labels:
          app: quarkus-app
      spec:
        containers:
        - image: quay.io/famargon/quarkus-sample-app
        # - image: default-route-openshift-image-registry.apps.amq-online.openshift-aws.rhocf-dev.com/default/quarkus-sample-app
          imagePullPolicy: Always
          name: quarkus-app
          livenessProbe:
            httpGet:
              path: /health
              port: 9999
              # httpHeaders:
              # - name: Custom-Header
              # value: Awesome
            initialDelaySeconds: 1
            periodSeconds: 5
          terminationGracePeriodSeconds: 30
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: quarkus-app
    name: quarkus-app
    namespace: quarkus-msvcs
  spec:
    ports:    
    - port: 9999
      protocol: TCP
      targetPort: 9999
      name: http
    selector:
      app: quarkus-app
    type: ClusterIP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: quarkus-app
    name: quarkus-app
    namespace: quarkus-msvcs
  spec:
    to:
      kind: Service
      name: quarkus-app
      weight: 100
